--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: hdmetor's blog
 email: hdmetor@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   hdmetor's programming and machine learning blog
-baseurl: "/blog"
+
+permalink: /blog/:year/:month/:day/:title
 
 # Build settings
 markdown: kramdown
